--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ajv": "5.0.0",
     "animate.css": "3.7.0",
     "classnames": "2.2.6",
+    "dotenv": "^6.2.0",
     "history": "4.7.2",
     "moment": "2.22.2",
     "node-sass-chokidar": "1.3.3",
