--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
+    "deploy": "aws s3 cp build/ s3://ericscroggins/ --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
