--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
     "react-slick": "0.23.1",
+    "react-stripe-elements": "^2.0.3",
     "react-swipeable-views": "0.13.0",
     "react-tagsinput": "3.19.0"
   },
