--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/markerclustererplus": "2.1.33",
     "ajv": "5.0.0",
     "animate.css": "3.7.0",
+    "axios": "^0.18.0",
     "classnames": "2.2.6",
     "dotenv": "^6.2.0",
     "history": "4.7.2",
