--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/markerclustererplus": "2.1.33",
     "ajv": "5.0.0",
     "animate.css": "3.7.0",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "classnames": "2.2.6",
     "dotenv": "^6.2.0",
+    "emailjs": "^2.2.0",
+    "emailjs-com": "^2.3.2",
     "history": "4.7.2",
     "moment": "2.22.2",
     "node-sass-chokidar": "1.3.3",
