--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "16.5.2",
     "react-download-link": "^2.2.0",
     "react-google-maps": "9.4.5",
+    "react-iframe": "^1.8.0",
     "react-image-gallery": "0.8.11",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
@@ -37,10 +38,11 @@
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
+    "start-js": "NODE_PATH=./src react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
+    "build": "npm run build-css && NODE_PATH=./src react-scripts build",
     "deploy": "aws s3 cp build/ s3://ericscroggins/ --recursive",
+    "deploy2": "aws s3 cp build/ s3://ericscroggins2/ --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
