final deployment changes

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "start-js": "NODE_PATH=./src react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && NODE_PATH=./src react-scripts build",
-    "deploy": "aws s3 cp build/ s3://ericscroggins/ --recursive",
-    "deploy2": "aws s3 cp build/ s3://ericscroggins2/ --recursive",
+    "deploy": "aws s3 cp build/ s3://ericscroggins.com/ --recursive",
+    "mock": "aws s3 cp build/ s3://ericscroggins/ --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
