--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "15.6.2",
     "react": "16.5.2",
     "react-animate-on-scroll": "2.1.5",
+    "react-app-polyfill": "^1.0.4",
     "react-datetime": "2.15.0",
     "react-dom": "16.5.2",
     "react-download-link": "^2.2.0",
@@ -41,7 +42,8 @@
     "start-js": "NODE_PATH=./src react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && NODE_PATH=./src react-scripts build",
-    "deploy": "aws s3 cp build/ s3://ericscroggins.com/ --recursive",
+    "deploy": "aws s3 cp build/ s3://ericscroggins.com/ --recursive && aws s3 cp build/ s3://www.ericscroggins.com/ --recursive",
+    "refresh": "aws cloudfront create-invalidation --distribution-id E1Z3LDVAU5HARH  --paths \"/*\"",
     "mock": "aws s3 cp build/ s3://ericscroggins/ --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
